--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="A Digital Photography Website" />
     <meta name="keywords"
         content="Candid Photography, Short-Films, Wedding Intros, Pre-Wedding Song Shoot, Designing ,Photography, wedding Albums, event Albums,Indoor Albums, outdoor Albums, photo Gallery" />
-    <meta name="author" content="KiranKumar Gonti" />
-    <title>Kiran Digital Studio | A Multilevel Digital Studio</title>
+    <meta name="author" content="Ansh jain photography" />
+    <title>Ansh Jain Photography | A Multilevel Digital Studio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,7 +27,7 @@
         <!--Nav bar----------->
         <nav class="navbar navbar-expand-md navbar-dark bg-none">
             <div class="container">
-                <a class="navbar-brand" href="./index.html">Kiran Digital Studio</a>
+                <a class="navbar-brand" href="./index.html">Ansh Jain Photography</a>
                 <button class="navbar-toggler border-white d-lg-none" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -57,11 +57,11 @@
             <div class="container-fluid p-0">
                 <div class="col-12">
                     <div class="banner-main">
-                        <h1>Kiran Digital Studio</h1>
+                        <h1>Ansh Jain Photography</h1>
                         <p>
                             “The picture that you took with your camera is the imagination you want to create a reality
                             with
-                            <strong style="color: orange;">Kiran Digital studio</strong>”
+                            <strong style="color: orange;">Ansh Jain Photography</strong>”
                         </p>
                         <div class="banner-buttons">
                             <a href="./albums.html" class="btn btn-lg btn-outline-none">View My Gallery</a>
@@ -184,7 +184,7 @@
                             <p data-lax-preset="fadeIn" data-scroll class="services-content lax">
                                 “I love doing short films because they're much more intimate and there's far less
                                 waiting
-                                around than on the bigger films”<br><strong>—Kirankumar Gonti</strong>
+                                around than on the bigger films”<br><strong>—Ansh Jain</strong>
                             </p>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
         <div class="container about-custom">
             <div class="col-12">
                 <div class="about-info text-center text-white">
-                    <h2 data-lax-preset="fadeIn" class="lax"> H! I'm KiranKumar Gonti</h2 data-scroll>
+                    <h2 data-lax-preset="fadeIn" class="lax"> H! I'm Ansh Jain</h2 data-scroll>
                     <h4 data-lax-preset="fadeIn" class="lax">“I really believe there are things nobody would see if I
                         didn’t photograph them.”</h4>
                     <p data-lax-preset="fadeIn" class="about-content lax">
@@ -305,7 +305,7 @@
             <p class="text-muted">
                 &copy; Copyright <script type="text/javascript">
                     document.write(new Date().getFullYear());
-                  </script> Kiran Digital Studio - All Rights Received
+                  </script> Ansh Jain Photography - All Rights Received
             </p>
         </div>
     </footer>
