--- a/index.html
+++ b/index.html
@@ -263,17 +263,17 @@
                         <div class="address">
                             <i class="fas fa-envelope"></i>
                             <h2>Mail</h2>
-                            <h4><a href="mailto:kirankumar225rk@gmail.com" style="color: #ffffff;">kirankumar225rk@gmail.com</a>
+                            <h4><a href="mailto:gd.kartikjain@gmail.com" style="color: #ffffff;">gd.kartikjain@gmail.com</a>
                             </h4>
                         </div>
                         <div class="address">
                             <i class="fas fa-phone-volume"></i>
                             <h2>Let's Talk</h2>
-                            <h4><a href="tel:+917569984640" style="color: #ffffff;">+917569984640</a></h4>
+                            <h4><a href="tel:+9664408445" style="color: #ffffff;">+919664408445</a></h4>
                         </div>
                         <div class="address">
                             <i class="fas fa-map-marker-alt"></i>
-                            <p>Thirmalapur, Kotagiri, Nizamabad, Telanagana - 503207</p>
+                            <p>D-232,AAZAD NAGAR near Panna Dhay Circle,BHILWARA(RAJ.)</p>
                         </div>
                     </div>
                 </div>
