--- a/index.html
+++ b/index.html
@@ -282,15 +282,15 @@
                         <h2>Like My Work ?</h2>
                         <h3>If so; why not follow me on…</h3>
                         <div class="social-icons">
-                            <a target="_blank" href="https://www.facebook.com/kmunna2"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a target="_blank" href="https://twitter.com/GontiKirankumar"><i class="fab fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.instagram.com/kirankumar_gonti57/"><i
+<!--                             <a target="_blank" href="https://www.facebook.com/kmunna2"><i -->
+<!--                                     class="fab fa-facebook-f"></i></a> -->
+<!--                             <a target="_blank" href="https://twitter.com/GontiKirankumar"><i class="fab fa-twitter"></i></a> -->
+                            <a target="_blank" href="https://www.instagram.com/anshjain_photography?igsh=eXMzcGw4Ymp0OGFm"><i
                                     class="fab fa-instagram "></i></a>
-                            <a target="_blank" href=""><i class="fab fa-behance"></i></a>
-                            <a target="_blank" href=""><i class="fab fa-flickr"></i></a>
-                            <a target="_blank" href="https://www.youtube.com/kirankumargonti"><i
-                                    class="fab fa-youtube-square"></i></a>
+<!--                             <a target="_blank" href=""><i class="fab fa-behance"></i></a> -->
+<!--                             <a target="_blank" href=""><i class="fab fa-flickr"></i></a> -->
+<!--                             <a target="_blank" href="https://www.youtube.com/kirankumargonti"><i -->
+<!--                                     class="fab fa-youtube-square"></i></a> -->
                         </div>
                         <h3>I'm Also On Social Networks</h3>
                     </div>
