--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-lg-7 col-md-12 col-sm-12">
                         <div class="photography-left">
-                            <h1 data-scroll data-lax-preset="fadeIn" class="services-title lax">Photography</h1>
+                            <h1 data-scroll data-lax-preset="fadeIn" class="services-title lax">Portrait</h1>
                             <p data-scroll data-lax-preset="fadeIn" class="services-content lax">
                                 “Photography is a way of feeling, of touching, of loving. What you have caught on film
                                 is captured forever… It remembers little things, long after you have forgotten
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-lg-7 col-md-12 col-sm-12">
                         <div class="design-left">
-                            <h1 data-lax-preset="fadeIn" data-scroll class="services-title lax">Dramatic designing</h1>
+                            <h1 data-lax-preset="fadeIn" data-scroll class="services-title lax">Wedding</h1>
                             <p data-lax-preset="fadeIn" data-scroll class="services-content lax">
                                 “A designer knows he has achieved perfection not when there is nothing left to add, but
                                 when there is nothing left to take away”<br><strong>— Antoine de Saint</strong>
@@ -148,7 +148,7 @@
                     <div class="col-lg-7 col-md-12 col-sm-12">
                         <div class="wedding-left">
                             <h1 data-lax-preset="fadeIn" data-scroll class="services-title lax">
-                                Pre-Wedding Song Shoot & Wedding Intros
+                                Pre-Wedding 
                             </h1>
                             <p data-lax-preset="fadeIn" data-scroll class="services-content lax">
                                 “The groom always smiles proudly because he’s convinced he’s accomplished something
@@ -180,7 +180,7 @@
                     </div>
                     <div class="col-lg-7 col-md-12 col-sm-12">
                         <div class="shot-films-left">
-                            <h1 data-lax-preset="fadeIn" data-scroll class="services-title lax">Short-Films</h1>
+                            <h1 data-lax-preset="fadeIn" data-scroll class="services-title lax">Candid</h1>
                             <p data-lax-preset="fadeIn" data-scroll class="services-content lax">
                                 “I love doing short films because they're much more intimate and there's far less
                                 waiting
