--- a/albums.html
+++ b/albums.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Albums | Kiran Digital Studio</title>
+    <title>Albums | ANSH JAIN PHOTOGRAPHY</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
         <!--Nav bar----------->
         <nav class="navbar navbar-expand-md navbar-dark bg-none">
             <div class="container">
-                <a class="navbar-brand" href="./index.html">Kiran Digital Studio</a>
+                <a class="navbar-brand" href="./index.html">ANSH JAIN PHOTOGRAPHY</a>
                 <button class="navbar-toggler border-white d-lg-none" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -170,7 +170,7 @@
             <p class="text-muted">
                 &copy; Copyright <script type="text/javascript">
                     document.write(new Date().getFullYear());
-                  </script> Kiran Digital Studio - All Rights Received
+                  </script> ANSH JAIN PHOTOGRAPHY - All Rights Received
             </p>
         </div>
     </footer>
