--- a/albums.html
+++ b/albums.html
@@ -38,15 +38,14 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="nav-custom">
                                 <a class="dropdown-item" href="./albums/portrait.html">Portrait</a>
-                                <a class="dropdown-item" href="./albums/wedding.html">Wedding and
-                                    Pre-Wedding</a>
+                                <a class="dropdown-item" href="./albums/wedding.html">Pre Wedding</a>
                                 <a class="dropdown-item" href="./albums/events.html">Events</a>
                                 <a class="dropdown-item" href="./albums/candid.html">Candid</a>
-                                <a class="dropdown-item" href="./albums/advertising.html">Advertise</a>
-                                <a class="dropdown-item" href="./albums/nature.html">Nature</a>
-                                <a class="dropdown-item" href="./albums/indoor.html">Indoor</a>
-                                <a class="dropdown-item" href="./albums/outdoor.html">Outdoor</a>
-                                <a class="dropdown-item" href="./albums/social.html">Social</a>
+                                <!-- <a class="dropdown-item" href="./albums/advertising.html">Advertise</a> -->
+                                <!-- <a class="dropdown-item" href="./albums/nature.html">Nature</a> -->
+                                <!-- <a class="dropdown-item" href="./albums/indoor.html">Indoor</a> -->
+                                <!-- <a class="dropdown-item" href="./albums/outdoor.html">Outdoor</a> -->
+                                <!-- <a class="dropdown-item" href="./albums/social.html">Social</a> -->
                             </div>
                         </li>
                         <li class="nav-item">
@@ -86,11 +85,11 @@
                             <img src="https://cdn.pixabay.com/photo/2019/04/27/14/00/indian-4160039_1280.jpg" alt=""
                                 class="card-img img-fluid">
                             <div class="overlay-text">
-                                <h2>Wedding and Pre-Wedding</h2>
+                                <h2>Pre Wedding</h2>
                             </div>
                         </div>
                     </a>
-                    <a href="./albums/events.html" target="_blank">
+                    <!-- <a href="./albums/events.html" target="_blank">
                         <div class="gallery-images" data-scroll>
                             <img src="https://cdn.pixabay.com/photo/2016/01/19/18/02/concerts-1150042_1280.jpg" alt=""
                                 class="card-img img-fluid">
@@ -98,7 +97,7 @@
                                 <h2>Events</h2>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
                 <!--=================2nd row-images==================-->
                 <div class="col-sm-4 col-md-4 col-lg-4">
@@ -111,7 +110,8 @@
                             </div>
                         </div>
                     </a>
-                    <a href="./albums/advertising.html" target="_blank">
+                    
+                    <!-- <a href="./albums/advertising.html" target="_blank">
                         <div class="gallery-images" data-scroll>
                             <img src="https://cdn.pixabay.com/photo/2016/09/07/10/04/education-1651259_1280.jpg" alt=""
                                 class="card-img img-fluid">
@@ -119,8 +119,8 @@
                                 <h2>Advertising Photography</h2>
                             </div>
                         </div>
-                    </a>
-                    <a href="./albums/nature.html" target="_blank">
+                    </a> -->
+                    <!-- <a href="./albums/nature.html" target="_blank">
                         <div class="gallery-images" data-scroll>
                             <img src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?cs=srgb&dl=close-up-of-leaf-326055.jpg&fm=jpg"
                                 alt="" class="card-img img-fluid">
@@ -128,11 +128,20 @@
                                 <h2>Nature</h2>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
                 <!--=================3rd row-images==================-->
                 <div class="col-sm-4 col-md-4 col-lg-4">
-                    <a href="./albums/indoor.html" target="_blank">
+                    <a href="./albums/events.html" target="_blank">
+                        <div class="gallery-images" data-scroll>
+                            <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt=""
+                                class="card-img img-fluid">
+                            <div class="overlay-text">
+                                <h2>Events</h2>
+                            </div>
+                        </div>
+                    </a>
+                    <!-- <a href="./albums/indoor.html" target="_blank">
                         <div class="gallery-images" data-scroll>
                             <img src="https://images.pexels.com/photos/2793729/pexels-photo-2793729.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                                 alt="" class="card-img img-fluid">
@@ -149,8 +158,8 @@
                                 <h2>Outdoor</h2>
                             </div>
                         </div>
-                    </a>
-                    <a href="./albums/social.html" target="_blank">
+                    </a> -->
+                    <!-- <a href="./albums/social.html" target="_blank">
                         <div class="gallery-images" data-scroll>
                             <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
                                 alt="" class="card-img img-fluid">
@@ -158,7 +167,7 @@
                                 <h2>Social</h2>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
                 <!--=================gallery-images==================-->
             </div>
