--- a/albums/candid.html
+++ b/albums/candid.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Candid Album | Kiran Digital Studio</title>
+    <title>Candid Album | Ansh Digital Studio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
         <!--Nav bar----------->
         <nav class="navbar navbar-expand-md navbar-dark bg-none">
             <div class="container">
-                <a class="navbar-brand" href="../index.html">Kiran Digital Studio</a>
+                <a class="navbar-brand" href="../index.html">Ansh Digital Studio</a>
                 <button class="navbar-toggler border-white d-lg-none" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -80,39 +80,40 @@
     <!--=========Gallery-types==========-->
     <section id="gallery">
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1496283529737-a39ef33f214d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" onclick="openModal();currentSlide(1)" alt=""
+            <img src="../images/candid photography/DSC09326.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1499570918316-49e6bdd500b7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" onclick="openModal();currentSlide(2)" alt=""
+            <img src="../images/candid photography/DSC09458.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1495048129879-40f4fcb87045?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" onclick="openModal();currentSlide(3)" alt=""
+            <img src="../images/candid photography/DSC09334.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1493127348758-48920dd20b9a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" onclick="openModal();currentSlide(4)" alt=""
+            <img src="../images/potrairt/677A8034.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1489066018051-404bf1b5faa5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1049&q=80" onclick="openModal();currentSlide(5)" alt=""
+            <img src="../images/candid photography/DSC09456.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/247431/pexels-photo-247431.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" onclick="openModal();currentSlide(6)" alt=""
+            <img src="../images/potrairt/01-justa.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1468109320504-a5e48f17cfb7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1108&q=80" onclick="openModal();currentSlide(7)" alt=""
+            <img src="../images/potrairt/677A8021.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1445384291141-24217cd1d40c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" onclick="openModal();currentSlide(8)" alt=""
+            
+            <img src="../images/potrairt/677A8029.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/3280908/pexels-photo-3280908.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" onclick="openModal();currentSlide(9)" alt=""
+            <img src="../images/potrairt/677A8050.jpg" alt="" style="height: 300px !important; object-fit: cover;"
                 class="card-img img-fluid" />
         </div>
     </section>
@@ -214,7 +215,7 @@
             <p class="text-muted">
                 &copy; Copyright <script type="text/javascript">
                     document.write(new Date().getFullYear());
-                  </script> Kiran Digital Studio - All Rights Received
+                  </script> Ansh Digital Studio - All Rights Received
             </p>
         </div>
     </footer>
