--- a/albums/events.html
+++ b/albums/events.html
@@ -41,13 +41,13 @@
                                 Event
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="nav-custom">
-                                <a class="dropdown-item" href="./social.html">Social</a>
-                                <a class="dropdown-item" href="./wedding.html">Wedding and Pre-Wedding</a>
+                                <!-- <a class="dropdown-item" href="./social.html">Social</a> -->
+                                <a class="dropdown-item" href="./wedding.html">Pre-Wedding</a>
                                 <a class="dropdown-item" href="./portrait.html">Portrait</a>
-                                <a class="dropdown-item" href="./nature.html">Nature</a>
-                                <a class="dropdown-item" href="./advertising.html">Advertise</a>
-                                <a class="dropdown-item" href="./indoor.html">Indoor</a>
-                                <a class="dropdown-item" href="./outdoor.html">Outdoor</a>
+                                <!-- <a class="dropdown-item" href="./nature.html">Nature</a> -->
+                                <!-- <a class="dropdown-item" href="./advertising.html">Advertise</a> -->
+                                <!-- <a class="dropdown-item" href="./indoor.html">Indoor</a> -->
+                                <!-- <a class="dropdown-item" href="./outdoor.html">Outdoor</a> -->
                                 <a class="dropdown-item" href="./candid.html">Candid</a>
                             </div>
                         </li>
@@ -80,41 +80,41 @@
     <!--=========Gallery-types==========-->
     <section id="gallery">
         <div class="img-grid" data-scroll>
-            <img src="https://images.unsplash.com/photo-1523580494863-6f3031224c94?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&dl=md-duran-rE9vgD_TXgM-unsplash.jpg"
-                onclick="openModal();currentSlide(1)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/8e3fc3d731479cc542a821cf1dc705f8.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/3023317/pexels-photo-3023317.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                onclick="openModal();currentSlide(2)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/17a2282222b86d5dfd6232c5b2b034fe.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/518389/pexels-photo-518389.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                onclick="openModal();currentSlide(3)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/201ac4181b254c932fa82532f9ac0059.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1708936/pexels-photo-1708936.jpeg?crop=entropy&cs=srgb&dl=man-standing-in-front-of-people-sitting-on-red-chairs-1708936.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(4)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/209352ef3fe0e1da00344d20c8aa1f1a.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/2774556/pexels-photo-2774556.jpeg?crop=entropy&cs=srgb&dl=people-sitting-on-gang-chairs-2774556.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(5)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/1623275a77b65438e668a6f4b036e3d1.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/2167139/pexels-photo-2167139.jpeg?crop=entropy&cs=srgb&dl=man-holding-microphone-2167139.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(6)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/a962efc760dbc611b0c85a0480463bf9.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/2342400/pexels-photo-2342400.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                onclick="openModal();currentSlide(7)" alt="" class="card-img img-fluid" />
+            <img src="../images/event photography/ad3443f9d60222acb6cac782dccd3e45.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
+        </div>
+        <!-- <div class="img-grid" data-scroll>
+            <img src="../images/event photography/8e3fc3d731479cc542a821cf1dc705f8.jpg"
+                style="height: 300px !important; object-fit: cover;" alt="" class="card-img img-fluid" />
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/2034851/pexels-photo-2034851.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                onclick="openModal();currentSlide(8)" alt="" class="card-img img-fluid" />
-        </div>
-        <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/3025096/pexels-photo-3025096.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                onclick="openModal();currentSlide(9)" class="card-img img-fluid" />
-        </div>
+            <img src="../images/event photography/8e3fc3d731479cc542a821cf1dc705f8.jpg"
+                style="height: 300px !important; object-fit: cover;" class="card-img img-fluid" />
+        </div> -->
     </section>
     <!--==============================Gallery -preview========================================================-->
     <div id="myModal" class="modal">
