--- a/albums/portrait.html
+++ b/albums/portrait.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Portrait Album | Kiran Digital Studio</title>
+    <title>Portrait Album | Ansh Digital Studio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
         <!--Nav bar----------->
         <nav class="navbar navbar-expand-md navbar-dark bg-none">
             <div class="container">
-                <a class="navbar-brand" href="../index.html">Kiran Digital Studio</a>
+                <a class="navbar-brand" href="../index.html">Ansh Digital Studio</a>
                 <button class="navbar-toggler border-white d-lg-none" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,13 +40,13 @@
                                 Portrait
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="nav-custom">
-                                <a class="dropdown-item" href="./social.html">Social</a>
-                                <a class="dropdown-item" href="./wedding.html">Wedding and Pre-Wedding</a>
+                                <!-- <a class="dropdown-item" href="./social.html">Social</a> -->
+                                <a class="dropdown-item" href="./wedding.html">Pre-Wedding</a>
                                 <a class="dropdown-item" href="./events.html">Events</a>
-                                <a class="dropdown-item" href="./nature.html">Nature</a>
-                                <a class="dropdown-item" href="./advertising.html">Advertise</a>
-                                <a class="dropdown-item" href="./indoor.html">Indoor</a>
-                                <a class="dropdown-item" href="./outdoor.html">Outdoor</a>
+                                <!-- <a class="dropdown-item" href="./nature.html">Nature</a> -->
+                                <!-- <a class="dropdown-item" href="./advertising.html">Advertise</a> -->
+                                <!-- <a class="dropdown-item" href="./indoor.html">Indoor</a> -->
+                                <!-- <a class="dropdown-item" href="./outdoor.html">Outdoor</a> -->
                                 <a class="dropdown-item" href="./candid.html">Candid</a>
                             </div>
                         </li>
@@ -78,41 +78,41 @@
     <!-- End Of Gallery-banner----------->
     <!--=========Gallery-types==========-->
     <section id="gallery">
-        <div class="img-grid" data-scroll>
-            <img src="https://cdn.pixabay.com/photo/2017/01/23/19/40/woman-2003647_1280.jpg"
-                onclick="openModal();currentSlide(1)" alt="" class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/01-justa.jpg" style="height: 300px !important; object-fit: cover;"
+                 alt="" class="card-img img-fluid" style="height: 300px !important;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/573299/pexels-photo-573299.jpeg?crop=entropy&cs=srgb&dl=adolescence-attractive-beautiful-blur-573299.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(2)" alt="" class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/677A8050.jpg"  alt=""
+            class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/876344/pexels-photo-876344.jpeg?crop=entropy&cs=srgb&dl=close-up-photography-of-a-man-holding-rifle-876344.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(3)" alt="" class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/03-justa.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="../images/albums/portrait/hijab-3064633_1920.jpg" onclick="openModal();currentSlide(4)" alt=""
-                class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/677A8044.jpg"  alt=""
+                class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1193942/pexels-photo-1193942.jpeg?crop=entropy&cs=srgb&dl=photo-of-woman-wearing-blue-dress-1193942.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(5)" alt="" class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/04-justa.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1029572/pexels-photo-1029572.jpeg?crop=entropy&cs=srgb&dl=portrait-of-woman-1029572.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(6)" alt="" class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/677A8047.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="../images/albums/portrait/1.jpg" onclick="openModal();currentSlide(7)" alt=""
-                class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/02-justa.jpg" style="height: 300px !important; object-fit: cover;"
+             alt="" class="card-img img-fluid" style="height: 300px !important;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="../images/albums/portrait/2.jpg" onclick="openModal();currentSlide(8)" alt=""
-                class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/677A8029.jpg"  alt=""
+                class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
-        <div class="img-grid" data-scroll>
-            <img src="../images/albums/portrait/3.jpg" onclick="openModal();currentSlide(9)" alt=""
-                class="card-img img-fluid" />
+        <div class="img-grid" data-scroll style="height: 300px !important;">
+            <img src="../images/potrairt/677A8034.jpg"  alt=""
+                class="card-img img-fluid" style="height: 300px !important; object-fit: cover;" />
         </div>
     </section>
     <!--==============================Gallery -preview========================================================-->
@@ -223,7 +223,7 @@
             <p class="text-muted">
                 &copy; Copyright <script type="text/javascript">
                     document.write(new Date().getFullYear());
-                  </script> Kiran Digital Studio - All Rights Received
+                  </script> Ansh Photography - All Rights Received
             </p>
         </div>
     </footer>
