--- a/albums/wedding.html
+++ b/albums/wedding.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Wedding Album | kiran Digital Studio</title>
+    <title>Wedding Album | Ansh Digital Studio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
         <!--Nav bar----------->
         <nav class="navbar navbar-expand-md navbar-dark bg-none">
             <div class="container">
-                <a class="navbar-brand" href="../index.html">Kiran Digital Studio</a>
+                <a class="navbar-brand" href="../index.html">Ansh Digital Studio</a>
                 <button class="navbar-toggler border-white d-lg-none" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,13 +40,13 @@
                                 Wedding
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="nav-custom">
-                                <a class="dropdown-item" href="./social.html">Social</a>
+                                <!-- <a class="dropdown-item" href="./social.html">Social</a> -->
                                 <a class="dropdown-item" href="./portrait.html">Portrait</a>
                                 <a class="dropdown-item" href="./events.html">Events</a>
-                                <a class="dropdown-item" href="./nature.html">Nature</a>
-                                <a class="dropdown-item" href="./advertising.html">Advertise</a>
-                                <a class="dropdown-item" href="./indoor.html">Indoor</a>
-                                <a class="dropdown-item" href="./outdoor.html">Outdoor</a>
+                                <!-- <a class="dropdown-item" href="./nature.html">Nature</a> -->
+                                <!-- <a class="dropdown-item" href="./advertising.html">Advertise</a> -->
+                                <!-- <a class="dropdown-item" href="./indoor.html">Indoor</a> -->
+                                <!-- <a class="dropdown-item" href="./outdoor.html">Outdoor</a> -->
                                 <a class="dropdown-item" href="./candid.html">Candid</a>
                             </div>
                         </li>
@@ -68,7 +68,7 @@
             <div class="container-fluid p-0">
                 <div class="col-12">
                     <div class="banner-main">
-                        <h1>Wedding</h1>
+                        <h1>Pre Wedding</h1>
                         <p>“Gravitation is not responsible for people falling in love.”</p>
                     </div>
                 </div>
@@ -79,40 +79,40 @@
     <!--=========Gallery-types==========-->
     <section id="gallery">
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1779414/pexels-photo-1779414.jpeg?crop=entropy&cs=srgb&dl=wedding-1779414.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(1)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06091.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://cdn.pixabay.com/photo/2019/08/06/12/01/indian-4388167_1280.jpg"
-                onclick="openModal();currentSlide(2)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06159.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/2060240/pexels-photo-2060240.jpeg?crop=entropy&cs=srgb&dl=group-of-people-gathering-inside-room-2060240.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(3)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06020.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1456613/pexels-photo-1456613.jpeg?crop=entropy&cs=srgb&dl=man-and-woman-holding-wedding-rings-1456613.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(4)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06128.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://cdn.pixabay.com/photo/2019/08/21/04/16/henna-4420111_1280.jpg"
-                onclick="openModal();currentSlide(5)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06140.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://cdn.pixabay.com/photo/2016/11/18/18/32/bloom-1836315_1280.jpg"
-                onclick="openModal();currentSlide(6)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06177.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1182963/pexels-photo-1182963.jpeg?crop=entropy&cs=srgb&dl=man-pouring-woman-yellow-flowers-1182963.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(7)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06222.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://images.pexels.com/photos/1488318/pexels-photo-1488318.jpeg?crop=entropy&cs=srgb&dl=couple-standing-under-tree-1488318.jpg&fit=crop&fm=jpg&h=1080&w=1920"
-                onclick="openModal();currentSlide(8)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06296.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
         <div class="img-grid" data-scroll>
-            <img src="https://cdn.pixabay.com/photo/2016/11/21/15/58/aisle-1846114_1280.jpg"
-                onclick="openModal();currentSlide(9)" alt="" class="card-img img-fluid" />
+            <img src="../images/prewedding/DSC06318.jpg"
+                 alt="" class="card-img img-fluid" style="height: 300px !important; object-fit: cover;"/>
         </div>
     </section>
     <!--==============================Gallery -preview========================================================-->
@@ -224,7 +224,7 @@
             <p class="text-muted">
                 &copy; Copyright <script type="text/javascript">
                     document.write(new Date().getFullYear());
-                  </script> Kiran Digital Studio - All Rights Received
+                  </script> Ansh Digital Studio - All Rights Received
             </p>
         </div>
     </footer>
